# llm_serving

./: .gitignore  01_langchain_test.ipynb  02_RAG.ipynb  02_RAG_Chatbot_app.py  03_Multimodal_RAG.ipynb  04_GraphRAG.ipynb  pyproject.toml
db/directory/: chroma.sqlite3
db/directory/chroma/: chroma.sqlite3
