[project]
name = "llm-serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "chromadb>=1.4.0",
    "langchain>=1.2.3",
    "langchain-community==0.3.29",
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "markupsafe<3",
    "matplotlib>=3.10.8",
    "neo4j>=6.0.3",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.57.3",
    "unstructured>=0.18.26",
]
